--- a/static/css/style.css
+++ b/static/css/style.css
@@ -122,6 +122,8 @@ hr {
   border-bottom: 1px dashed #999;
 }
 
+a.extra:hover { border-bottom: 1px dashed #999; }
+
 /*****************************************************************************/
 /* Site
 /*****************************************************************************/
